Migration from monolit

--- a/services/auth-service/.env
+++ b/services/auth-service/.env
@@ -2,6 +2,6 @@ PORT=8081
 JWT_SECRET=dev-secret
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASS=your_password
+DB_PASS=postgres
 DB_NAME=unbound_auth
 DB_PORT=5432
