--- a/services/user-service/.env
+++ b/services/user-service/.env
@@ -1,6 +1,9 @@
 PORT=8082
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASS=your_password
+DB_PASS=postgres
 DB_NAME=unbound_user
 DB_PORT=5432
+
+AUTH_GRPC_ADDR=localhost:50051
+PORT=8082
