return value to user services via grpc

--- a/services/auth-service/Dockerfile
+++ b/services/auth-service/Dockerfile
@@ -1,12 +1,14 @@
 # syntax=docker/dockerfile:1
-FROM golang:1.23-alpine AS builder
+FROM golang:1.24-alpine AS builder
+
 WORKDIR /app
 COPY . .
-RUN go mod tidy && go build -o service .
+WORKDIR /app/services/auth-service
+RUN go mod tidy && go build -o /app/service ./cmd/server
 
 FROM alpine:3.20
 WORKDIR /app
 COPY --from=builder /app/service .
-COPY .env .env
-EXPOSE 8080
+COPY services/auth-service/.env .env
+EXPOSE 8081
 CMD ["./service"]
