--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,107 @@
 version: "3.9"
+
 services:
+  # ============================
+  # DATABASE (PostgreSQL)
+  # ============================
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: unbound_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  # ============================
+  # CORE SERVICES
+  # ============================
+
   auth-service:
-    build: ./services/auth-service
+    build:
+      context: .
+      dockerfile: ./services/auth-service/Dockerfile
+    container_name: auth-service
     ports:
       - "8081:8081"
     env_file: ./services/auth-service/.env
+    depends_on:
+      - postgres
+      - redpanda
+    environment:
+      - DB_HOST=postgres         # ✅ connect ke container postgres
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASS=postgres
+      - DB_NAME=unbound_auth
 
   user-service:
-    build: ./services/user-service
+    build:
+      context: .
+      dockerfile: ./services/user-service/Dockerfile
+    container_name: user-service
     ports:
       - "8082:8082"
     env_file: ./services/user-service/.env
     depends_on:
       - auth-service
+      - postgres
+      - redpanda
+    environment:
+      - DB_HOST=postgres         # ✅ fix koneksi DB
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASS=postgres
+      - DB_NAME=unbound_user
+      - KAFKA_BROKER=redpanda:9092
 
   chat-service:
     build: ./services/chat-service
+    container_name: chat-service
     ports:
       - "8083:8083"
     env_file: ./services/chat-service/.env
     depends_on:
       - auth-service
       - user-service
+      - postgres
 
   notification-service:
-    build: ./services/notification-service
+    build:
+      context: .
+      dockerfile: ./services/notification-service/Dockerfile
+    container_name: notification-service
     ports:
       - "8084:8084"
     env_file: ./services/notification-service/.env
     depends_on:
       - auth-service
+      - redpanda
+      - postgres
+    environment:
+      - DB_HOST=postgres         # ✅ fix koneksi DB
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASS=postgres
+      - DB_NAME=unbound_notification
+      - KAFKA_BROKER=redpanda:9092
 
   post-service:
     build: ./services/post-service
+    container_name: post-service
     ports:
       - "8085:8085"
     env_file: ./services/post-service/.env
+    depends_on:
+      - postgres
 
   feed-service:
     build: ./services/feed-service
+    container_name: feed-service
     ports:
       - "8086:8086"
     env_file: ./services/feed-service/.env
@@ -47,8 +110,46 @@ services:
 
   recommendation-service:
     build: ./services/recommendation-service
+    container_name: recommendation-service
     ports:
       - "8087:8087"
     env_file: ./services/recommendation-service/.env
     depends_on:
       - feed-service
+
+  # ============================
+  # Redpanda (Kafka Compatible)
+  # ============================
+
+  redpanda:
+    image: docker.redpanda.com/redpandadata/redpanda:v24.2.4
+    container_name: redpanda
+    restart: unless-stopped
+    ports:
+      - "9092:9092"   # Kafka API
+      - "9644:9644"   # Admin API
+    command:
+      - redpanda start
+      - --overprovisioned
+      - --smp 1
+      - --memory 1G
+      - --reserve-memory 0M
+      - --node-id 0
+      - --check=false
+      - --kafka-addr 0.0.0.0:9092
+      - --advertise-kafka-addr redpanda:9092
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    restart: unless-stopped
+    ports:
+      - "8088:8080"
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=unbound-cluster
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=redpanda:9092
+    depends_on:
+      - redpanda
+
+volumes:
+  postgres_data:
