--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,4 @@
-version: "3.9"
-
 services:
-  # ============================
-  # DATABASE (PostgreSQL)
-  # ============================
   postgres:
     image: postgres:15
     container_name: postgres
@@ -17,10 +12,6 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  # ============================
-  # CORE SERVICES
-  # ============================
-
   auth-service:
     build:
       context: .
@@ -33,7 +24,7 @@ services:
       - postgres
       - redpanda
     environment:
-      - DB_HOST=postgres         # ✅ connect ke container postgres
+      - DB_HOST=postgres
       - DB_PORT=5432
       - DB_USER=postgres
       - DB_PASS=postgres
@@ -52,23 +43,12 @@ services:
       - postgres
       - redpanda
     environment:
-      - DB_HOST=postgres         # ✅ fix koneksi DB
+      - DB_HOST=postgres
       - DB_PORT=5432
       - DB_USER=postgres
       - DB_PASS=postgres
       - DB_NAME=unbound_user
       - KAFKA_BROKER=redpanda:9092
-
-  chat-service:
-    build: ./services/chat-service
-    container_name: chat-service
-    ports:
-      - "8083:8083"
-    env_file: ./services/chat-service/.env
-    depends_on:
-      - auth-service
-      - user-service
-      - postgres
 
   notification-service:
     build:
@@ -83,51 +63,20 @@ services:
       - redpanda
       - postgres
     environment:
-      - DB_HOST=postgres         # ✅ fix koneksi DB
+      - DB_HOST=postgres
       - DB_PORT=5432
       - DB_USER=postgres
       - DB_PASS=postgres
       - DB_NAME=unbound_notification
       - KAFKA_BROKER=redpanda:9092
 
-  post-service:
-    build: ./services/post-service
-    container_name: post-service
-    ports:
-      - "8085:8085"
-    env_file: ./services/post-service/.env
-    depends_on:
-      - postgres
-
-  feed-service:
-    build: ./services/feed-service
-    container_name: feed-service
-    ports:
-      - "8086:8086"
-    env_file: ./services/feed-service/.env
-    depends_on:
-      - post-service
-
-  recommendation-service:
-    build: ./services/recommendation-service
-    container_name: recommendation-service
-    ports:
-      - "8087:8087"
-    env_file: ./services/recommendation-service/.env
-    depends_on:
-      - feed-service
-
-  # ============================
-  # Redpanda (Kafka Compatible)
-  # ============================
-
   redpanda:
     image: docker.redpanda.com/redpandadata/redpanda:v24.2.4
     container_name: redpanda
     restart: unless-stopped
     ports:
-      - "9092:9092"   # Kafka API
-      - "9644:9644"   # Admin API
+      - "9092:9092"
+      - "9644:9644"
     command:
       - redpanda start
       - --overprovisioned
