--- a/services/user-service/.env
+++ b/services/user-service/.env
@@ -1,9 +1,9 @@
 PORT=8082
-DB_HOST=localhost
+DB_HOST=postgres
 DB_USER=postgres
 DB_PASS=postgres
 DB_NAME=unbound_user
 DB_PORT=5432
 
-AUTH_GRPC_ADDR=localhost:50051
+AUTH_GRPC_ADDR=auth-service:50051
 KAFKA_BROKER=kafka:9092
