--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -1,14 +1,24 @@
 # syntax=docker/dockerfile:1
+
 FROM golang:1.24-alpine AS builder
 
 WORKDIR /app
-COPY . .
-WORKDIR /app/services/auth-service
-RUN go mod tidy && go build -o /app/service ./cmd/server
+
+# shared dibutuhkan untuk auth gRPC client, dll
+COPY shared ./shared
+COPY services/user-service ./services/user-service
+
+WORKDIR /app/services/user-service
+
+RUN go mod tidy && \
+    go build -o /app/service ./cmd/server
 
 FROM alpine:3.20
+
 WORKDIR /app
+
 COPY --from=builder /app/service .
 COPY services/user-service/.env .env
+
 EXPOSE 8082
 CMD ["./service"]
