--- a/services/chat-service/.env
+++ b/services/chat-service/.env
@@ -1,6 +1,13 @@
 PORT=8083
-DB_HOST=localhost
+
+DB_HOST=postgres
 DB_USER=postgres
-DB_PASS=your_password
+DB_PASS=postgres
 DB_NAME=unbound_chat
 DB_PORT=5432
+
+KAFKA_BROKER=redpanda:9092
+CHAT_TOPIC=chat-events
+
+AUTH_GRPC_ADDR=auth-service:50051
+USER_GRPC_ADDR=user-service:50052
