--- a/services/chat-service/.env
+++ b/services/chat-service/.env
@@ -7,7 +7,7 @@ DB_NAME=unbound_chat
 DB_PORT=5432
 
 KAFKA_BROKER=redpanda:9092
-CHAT_TOPIC=chat-events
+KAFKA_TOPIC=chat-events
 
 AUTH_GRPC_ADDR=auth-service:50051
 USER_GRPC_ADDR=user-service:50052
